card styling fixed on mobile version

--- a/src/components/pages/mainpage.css
+++ b/src/components/pages/mainpage.css
@@ -150,6 +150,7 @@
 
   .card {
     height: 400px;
+    width: 300px;
   }
 
   .yatch img {
